--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-lottie-player": "^1.5.5"
+    "react-lottie-player": "^1.5.5",
+    "react-youtube": "^10.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10",
